Fixed tooltips overlapping with the header

--- a/static/style.css
+++ b/static/style.css
@@ -212,7 +212,7 @@ body.fixed .header-fixed {
 	width: 100%;
 	top: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 1000;
 }
 
 body.fixed .header-fixed-placeholder {
@@ -274,7 +274,7 @@ body {
     padding: 5px;
     max-width: var(--hoverwidth);
     background: var(--formcolor);
-    z-index: 10000;
+    z-index: 100;
     border: 1px solid var(--bordcolor);
 }
 
